// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenSourceProject when there are no transforms for this project renders correctly 1`] = `
<Fragment>
  <Styled(MuiBox)
    mb={2}
  >
    <Heading
      level={2}
    >
      Test Open Source Project
    </Heading>
    <WithStyles(ForwardRef(Typography))
      variant="subtitle1"
    >
      Test Open Source Project Description
    </WithStyles(ForwardRef(Typography))>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    display="flex"
  >
    <WithStyles(ForwardRef(Paper))>
      <Styled(MuiBox)
        px={2}
      >
        <Styled(MuiBox)
          pb={3}
        >
          <WithStyles(ForwardRef(List))>
            <ListItemLink
              href="https://foobarbazbuz.github.io"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="https://foobarbazbuz.github.io"
              text="Project"
            />
            <WithStyles(ForwardRef(Divider)) />
            <ListItemLink
              href="https://github.com/foobarbazbuz/foobarbazbuz/"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="https://github.com/foobarbazbuz/foobarbazbuz/"
              text="Repository"
            />
            <WithStyles(ForwardRef(Divider)) />
            <ListItemLink
              href="https://choosealicense.com/licenses/mit"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="MIT"
              text="License"
            />
            <WithStyles(ForwardRef(Divider)) />
          </WithStyles(ForwardRef(List))>
        </Styled(MuiBox)>
        <Heading
          level={4}
        >
          Transforms using this project:
        </Heading>
        <TransformList
          transforms={Array []}
          transformsPath="/transforms"
        />
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Paper))>
    <Styled(MuiBox)
      px={2}
    >
      <pre>
        
MIT License

Copyright (c) 2020 John Doe

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
  
      </pre>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
</Fragment>
`;

exports[`OpenSourceProject when there are transforms for this project renders correctly 1`] = `
<Fragment>
  <Styled(MuiBox)
    mb={2}
  >
    <Heading
      level={2}
    >
      Test Open Source Project
    </Heading>
    <WithStyles(ForwardRef(Typography))
      variant="subtitle1"
    >
      Test Open Source Project Description
    </WithStyles(ForwardRef(Typography))>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    display="flex"
  >
    <WithStyles(ForwardRef(Paper))>
      <Styled(MuiBox)
        px={2}
      >
        <Styled(MuiBox)
          pb={3}
        >
          <WithStyles(ForwardRef(List))>
            <ListItemLink
              href="https://foobarbazbuz.github.io"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="https://foobarbazbuz.github.io"
              text="Project"
            />
            <WithStyles(ForwardRef(Divider)) />
            <ListItemLink
              href="https://github.com/foobarbazbuz/foobarbazbuz/"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="https://github.com/foobarbazbuz/foobarbazbuz/"
              text="Repository"
            />
            <WithStyles(ForwardRef(Divider)) />
            <ListItemLink
              href="https://choosealicense.com/licenses/mit"
              icon={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "compare": null,
                  "displayName": "LinkIcon",
                  "muiName": "SvgIcon",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "render": [Function],
                  },
                }
              }
              isExternal={true}
              subtitle="MIT"
              text="License"
            />
            <WithStyles(ForwardRef(Divider)) />
          </WithStyles(ForwardRef(List))>
        </Styled(MuiBox)>
        <Heading
          level={4}
        >
          Transforms using this project:
        </Heading>
        <TransformList
          transforms={
            Array [
              Object {
                "defaultOutput": "0",
                "execute": [Function],
                "inputType": "Foo",
                "name": "Foo to Bar",
                "outputType": "Bar",
                "project": Object {
                  "description": "Test Open Source Project Description",
                  "license": Object {
                    "href": "https://choosealicense.com/licenses/mit",
                    "name": "MIT",
                    "slug": "mit",
                  },
                  "licenseText": "
MIT License

Copyright (c) 2020 John Doe

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
  ",
                  "name": "Test Open Source Project",
                  "projectHref": "https://foobarbazbuz.github.io",
                  "repositoryHref": "https://github.com/foobarbazbuz/foobarbazbuz/",
                  "slug": "test-open-source-project",
                },
                "slug": "foo-to-bar",
              },
            ]
          }
          transformsPath="/transforms"
        />
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Paper))>
    <Styled(MuiBox)
      px={2}
    >
      <pre>
        
MIT License

Copyright (c) 2020 John Doe

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
  
      </pre>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
</Fragment>
`;
